--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 ---
 layout: home
 ---
+
+<iframe
+  src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=3894373"
+  style="border: none"
+></iframe>
